# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  snipp-ru-demo-76-index.html~
.github/workflows/: linter-test-check.yml
page_loader/: download.py  parsing_cli.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
tests/fixtures/: after_files_ru-hexlet-io-courses.html  after_ru-hexlet-io-courses.html  before_files_ru-hexlet-io-courses.html  before_ru-hexlet-io-courses.html
